hphp/test/slow/goto/try_goto_out_finally.php.expectf

Fatal error: jump out of a finally block is disallowed in %s/try_goto_out_finally.php on line 7
